app/assets/sass/screen.scss
/* ... */
.container {
	.text-center {
		text-align: center;
	}
}

.container.under-navbar {
	padding-top: 100px;
	padding-bottom: 50px;

	@media screen and (max-width: $breakpointSmartphone) {
		padding-top: 70px;
	}
}

.stories-container {
	padding-top: 45px;

	#hero {
		max-width: 1170px;
		margin: 0 -15px;
		position: relative;

		img {
			max-width: 100%;
			@include filter(blur(1px));

			@media screen and (max-width: $breakpointSmartphone) {
				@include filter(blur(0px));
	    	}
		}
		.text {
			background: rgba(0,0,0,0.5);
			position: absolute;
			top: 20%;
			left: 2%;
			width: 60%;
			color: white;
			padding: 1rem;
			text-align: justify;
			font-family: 'Titillium Web', serif;
			font-size: 1.3em;
			transform: translateY(-50%);
			line-height: 2.2em;

			@media screen and (max-width: $breakpointSmartphone) {
	    		font-size: 1.1em;
				line-height: 1.5em;
				left: 0%;
				top: 10%;
				width: 70%;
	    	}
			@media screen and (max-width: $breakpointMiniSmartphone) {
	    		font-size: .9em;
				line-height: 1.5em;
				left: 0%;
				top: 5%;
				width: 70%;
	    	}
		}
	}
}

#stories {
	margin: 0 -15px;

	.story {
		padding: 15px 20px;
		background: white;
		color: black;
		text-align: justify;

		&:nth-child(even) {
			color: white;
			background: $lightBlue;

			h3 a:hover {
				background: white;
				color: $topbarColor;
			}

			h3 .story-id a:hover {
				background: white;
				color: $orange;
			}
		}

		.column {
			float:none;
	    	display:inline-block;
	    	vertical-align:middle;
	    	margin-right:-4px;

			.avatar {
				max-height: 100px;
				@include border-radius(50%);
			}
		}

		.column-avatar {
			border-right: 1px solid darken($lightGray, 10%);
		}

		h3 {
			color: $topbarColor;
			font-family: 'Titillium Web', serif;
			background: inherit;
			margin-top: 0;

			a {
				text-decoration: none;
				color: $topbarColor;
				padding: 3px 5px;
				@include element-transition;

				&:hover {
					background: $topbarColor;
					color: white;
				}
			}

			.story-id a {
				float: right;
				background: inherit;
				padding: 5px;
				color: $orange;

				&:hover {
					background: $orange;
					color: white;
				}
			}
		}

		.story-date {
			margin-top: .5em;
			text-align: right;
			font-style: italic;
		}

		h4 {
			margin: 15px 0 10px 0;
		}

	}

	form {
		margin-bottom: 4em;

		h1 {
			margin-bottom: 1.3em;
		}
	}

	h2 {
		margin: 1.5em 0 2em 0;
	}
}

.error-form {
	margin: 10px 0 0 20px;

	i.fa {
		margin-right: 15px;
	}
}

#download-app {
	@include ariane-line;

	h2 {
		margin-bottom: 1.2em;
	}

	.col-md-6 {		
		float:none;
	    display:inline-block;
	    vertical-align:middle;
	    margin-right:-4px;
	    text-align: justify;

	    &:first-child {
			@media screen and (min-width: $breakpointSmartphone) {
	    		font-size: 1.1em;
	    		line-height: 1.8em;
	    	}
	    }

	    img {
	    	margin-right: auto;
	    	margin-left: auto;
	    }

	    a {
			text-decoration: none;
			background: inherit;
			padding: 2px 3px;
			color: $lightBlue;
			@include element-transition;

			&:hover {
				background: $lightBlue;
				color: white;
			}
		}
	}
}

.quote {
	background: $red;
	width: 100%;
	padding: 20px 20px 15px 20px;
	color: white;
	font-size:1.1em;
	line-height: 1.5em;
	margin-bottom: 25px;
	border-bottom: 3px solid darken($red, 10%);
	text-align: justify;
	@include hyphens(auto);

	a, button {
		 @include element-transition;
	}

	.quotes-info {
		margin-top: 10px;
		font-size: 0.9em;

		@media screen and (max-width: $breakpointSmartphone) {
			font-size: 0.7em;
		}

		.link-author-profile {
			color: white;
			font-family: 'Titillium Web', sans-serif;
			font-weight: 700;
			text-decoration: none;
			float: right;
			letter-spacing: 1px;
			background:transparent;
			padding: 2px 5px;
			margin-top: -3px;

			@media screen and (max-width: $breakpointSmartphone) {
				margin-top: -5px;
			}
		}

		.float-left {
			float: left;
		}

		.social-buttons {
			opacity: 0;
			text-align: right;

			a {
				width: 24px;
				height: 24px;
				color: white;
				display: inline-block;
				text-align: center;

				@media screen and (max-width: $breakpointSmartphone) {
					width: 18px;
					height: 18px;
				}
				@media screen and (min-width: $breakpointSmartphone) and (max-width: $breakpointLargeDesktop) {
	    			width: 20px;
					height: 20px;
	    		}

			}

			a:hover i.fa-facebook {
				color: #4862A3;
			}

			a:hover i.fa-twitter {
				color: #55ACEE;
			}

			a:first-child {
				margin-right: 5px;

				@media screen and (max-width: $breakpointSmartphone) {
					margin-right: 3px;
				}
			}
		}

		span.link-author-profile:hover {
			cursor: default;
		}

		a.link-author-profile:hover, .badge:hover, .social-buttons a:hover {
			background: white !important;
			color: $lightBlue;
		}

		.favorite-links {
			@media screen and (max-width: $breakpointSmartphone) {
				padding: 0 5px;
			}

			.favorite-action {
				border: 0;
				outline: none;

				&:hover i.fa-heart, &:hover i.fa-heart-o {
					color: $red !important;
				}
			}
		}
	}
}

#title-comments, #title-add-comment {
	margin: 2em 0 1em 0;

	i.fa {
		margin-right: 20px;
	}
}

#countLetters {
	margin: 15px 0 0 10px;

	i.fa {
		margin-right: 10px;
	}
}
/* ... */

